--- a/#sourse/scss/style.scss
+++ b/#sourse/scss/style.scss
@@ -1,6 +1,7 @@
+@import "_wp-base";
 @import "_mixins";
 @import "_header";
-@import "_main-page";
+@import "_front-page";
 @import "_page";
 @import "_gallery-page";
 @import "_footer";
