--- a/#sourse/scss/_header.scss
+++ b/#sourse/scss/_header.scss
@@ -174,7 +174,7 @@ body {
 			max-width: $maxWidth;
 			margin: 0 auto;
 			margin-bottom: auto;
-			min-height: 60px;
+			min-height: 10vh;
 			z-index: 10;
 			overflow: hidden;
 			display: flex;
@@ -184,6 +184,9 @@ body {
 				height: 50px;
 				flex-wrap: nowrap;
 				flex: 1 1 auto;
+			}
+			@media (min-width: 1921px) {
+				max-width: unset;
 			}
 		}
 		/* .header__bg */
@@ -221,7 +224,7 @@ body {
 			width: 85%;
 			margin: 0 auto;
 			padding: 0 7.5%;
-			height: auto;
+			height: inherit;
 			display: flex;
 			align-items: center;
 			flex: 1 1 100%;
@@ -231,7 +234,7 @@ body {
 				flex: 0 1 auto;
 				flex-wrap: nowrap;
 				min-height: unset;
-				height: 50px;
+				// height: 50px;
 				margin: 0;
 				justify-content: space-between;
 				align-items: stretch;
@@ -241,9 +244,10 @@ body {
 		&__logo {
 			flex: 0 1 auto;
 			width: 275px;
+			width: 18.2%;
 			margin: 0;
 			display: flex;
-			justify-content: center;
+			// justify-content: center;
 			align-items: center;
 			z-index: 12;
 			@media (max-width: 767px) {
@@ -547,8 +551,8 @@ body {
 			justify-content: center;
 			align-items: center;
 			
-			@media (max-width: 1080px) {
-				// padding-top: 90px;
+			@media (min-width: 1921px) {
+				max-width: unset;
 			}
 			/* .main-content__section */
 			&__section {
