--- a/#sourse/scss/_header.scss
+++ b/#sourse/scss/_header.scss
@@ -37,8 +37,10 @@ body {
 	margin: 0 auto;
 	overflow-x: hidden;
 	font-family: Roboto, Arial, sans-serif;
-	&.lock {
-		overflow: hidden;
+	@media (max-width: 767px) {
+		&.lock {
+			overflow: hidden;
+		}
 	}
 }
 
@@ -60,7 +62,7 @@ body {
 }
 
 .wrapper {
-	// max-width: $maxWidth;
+	// max-width: #{$maxWidth + px};
 	// min-height: 100%;
 	// margin: 0 auto;
 }
@@ -171,12 +173,13 @@ body {
 			left: 0;
 			right: 0;
 			width: 100%;
-			max-width: $maxWidth;
+			max-width: #{$maxWidth + px};
 			margin: 0 auto;
 			margin-bottom: auto;
+			height: 10vh;
 			min-height: 10vh;
 			z-index: 10;
-			overflow: hidden;
+			// overflow: hidden;
 			display: flex;
 			flex-wrap: wrap;
 			@media (max-width: 767px) {
@@ -215,7 +218,7 @@ body {
 				bottom: 0;
 				background-image: linear-gradient(180deg, rgba(30,24,70,0.85), rgba(0,166,228,0.35) 35%);
 				@media (max-width: 1080px) {
-					background-image: linear-gradient(-15deg, #000000 15%, transparent 35% );
+					// background-image: linear-gradient(-15deg, #000000 15%, transparent 35% );
 				}
 			}
 		}
@@ -242,8 +245,7 @@ body {
 		}
 		/* .header__logo */
 		&__logo {
-			flex: 0 1 auto;
-			width: 275px;
+			flex: 0 0 18.2%;
 			width: 18.2%;
 			margin: 0;
 			display: flex;
@@ -257,6 +259,7 @@ body {
 			}
 
 			a {
+				width: 100%;
 				height: inherit;
 				display: flex;
 				align-items: center;
@@ -266,16 +269,17 @@ body {
 				}
 			}
 			img {
-				max-width: 100%;
+				width: 100%;
 				height: auto;
 			}
 		}
 
 		/* .header__navigation */
 		&__navigation {
-			position: relative;
+			// position: relative;
 			top: 0;
 			right: 0;
+			width: 100%;
 			min-height: 50px;
 			height: inherit;
 			margin: 0;
@@ -298,61 +302,79 @@ body {
 		}
 		/* .header__menu */
 		&__menu {
-				width: 100%;
-				height: 100%;
-				background-color: rgba(0, 0, 0, 0.85);
-				@media (max-width: 767px) {
-					background-color: #fff;
-				}
-				position: fixed;
-				top: 0;
+			background-color: rgba(30, 24, 70, 1.0);
+			// position: fixed;
+			position: absolute;
+			top: 0;
+			left: 100%;
+			right: 0;
+			width: 100%;
+			min-height: 10vh;
+			transition: all 0.3s ease;
+			opacity: 0;
+			&::before {
+			}
+			&.active {
+				z-index: 11;
 				left: 0;
+				opacity: 1;
+			}
+			@media (max-width: 767px) {
+				height: 100%;
+				background-color: #fff;
 				justify-content: center;
 				margin-top: -250%;
-				transition: all 0.3s ease;
 				overflow-y: auto;
 				display: flex;
 				align-items: center;
-				opacity: 0;
 				&.active {
 					z-index: auto;
 					margin-top: 0;
 					padding-top: 90px;
-					z-index: 11;
-					opacity: 1;
 				}
-			// }
+			}
 		}
 		/* .header__list */
 		&__list {
+			position: relative;
 			display: flex;
+			width: 70%;
+			height: 100%;
+			margin-left: auto;
+			margin-right: 12%;
+			padding: 1vh 0;
 			flex-wrap: wrap;
-			justify-content: flex-start;
+			justify-content: flex-end;
 			align-items: center;
 			align-content: center;
-			height: inherit;
-			list-style-type: none;
-			padding: 0;
-			margin: 0;
-			height: auto;
+			z-index: 12;
 			@media (max-width: 767px) {
 				justify-content: flex-start;
+				align-items: center;
+				align-content: center;
+				height: inherit;
+				list-style-type: none;
+				padding: 0;
+				margin: 0;
+				height: auto;
 				padding: 0;
 				height: auto;
 			}
 		}
 		/* .header__link */
 		&__link {
-			margin: 0 5px;
+			margin: 0 15px;
 			display: flex;
 			height: auto;
 			justify-content: center;
 			align-items: center;
 			align-content: center;
-			flex: 1 1 100%;
+			flex: 0 0 auto;
+			@media (max-width: 767px) {
+				flex: 1 1 100%;
+			}
 
 			@media (min-width: 768px) and (max-width: 1180px) {
-				// max-height: 90px;
 			}
 
 			@media (max-width: 767px) {
@@ -362,9 +384,9 @@ body {
 			}
 			a {
 				text-decoration: none;
-				font-size: 16px;
+				font-size: 0.75rem;
 				color: #fff;
-				padding: 10px 0;
+				padding: 15px;
 				margin: 0;
 				display: flex;
 				justify-content: center;
@@ -385,17 +407,21 @@ body {
 		}
 		/* .header__burger-wrapper */
 		&__burger-wrapper {
-			width: auto;
-			height: inherit;
+			// position: relative;
+			width: 9%;
+			height: 5vh;
 			display: flex;
 			justify-content: center;
 			align-items: center;
-			flex: 0 0 50px;
+			margin-top: auto;
+			margin-bottom: auto;
+			margin-right: 15px;
+			flex: 0 0 9%;
 			z-index: 12;
 
 			@media (min-width: 993px) {
 				&.active {
-					transform: translateX(-8px);
+					// transform: translateX(-8px);
 				}
 			}
 		}
@@ -404,14 +430,12 @@ body {
 			display: block;
 			position: relative;
 			top: 0;
-			right: 0;
-			width: 40px;
-			height: 30px;
+			right: 15px;
+			width: 100%;
+			height: 5vh;
 			cursor: pointer;
-			margin: auto 15px;
 			display: flex;
 			justify-content: center;
-			border-radius: 15px;
 			z-index: 111;
 			&::before,
 			&::after {
@@ -422,13 +446,13 @@ body {
 			&::before,
 			&::after {
 				display: block;
-				width: 50%;
+				width: 100%;
+				min-width: 30px;
 				margin: 0 auto;
 				height: 1px;
 				background-color: #ddd;
 				transition: all 0.3s ease;
 				&:active {
-					// background-color: #fff;
 				}
 			}
 			span {
@@ -449,14 +473,14 @@ body {
 			&:active::before,
 			&:active::after {
 			}
-			// &.active { background-color: #f5f5f5; }
+			// &.active { position: absolute; }
 			&.active span { transform: scale(0); }
 			&.active::before { transform: rotate(45deg); top: 50%; }
 			&.active::after { transform: rotate(-45deg); top: 50%; }
 		}
 		/* .header__title-wrapper */
 		&__maintitle-wrapper {
-			flex: 1 1 85%;
+			flex: 0 0 auto;
 			max-width: 85%;
 			min-height: 0;
 			height: 100%;
@@ -468,52 +492,36 @@ body {
 			padding: 0 15px;
 			color: #fff;
 			position: relative;
+			margin-right: auto;
 
 			@media (max-width: 767px) {
 				display: flex;
 				max-width: 100%;
-			}
-
-			p {
-				text-align: left;
-				padding: 0;
-				margin: 0;
-				@media (max-width: 767px) {
-					text-align: left;
-					padding: 0;
-					line-height: 1.6;
-					font-size: 0;
-				}
 			}
 		}
 		/* .header__maintitle, .header__title */
 		&__maintitle,
 		&__title {
 			flex: 1 1 100%;
-			font-size: 12px;
+			font-size: 0.75rem;
 			font-weight: 400;
-			line-height: 150%;
+			line-height: 140%;
 			margin: 0;
 			text-align: left;
 			display: inline-block;
 
 			@media (max-width: 767px) {
-				font-size: 10px;
-				margin: 0 50px 0 0;
-				text-align: left;
 			}
 			a {
-				font-size: 12px;
 				text-decoration: none;
 				color: #fff;
 
 				@media (max-width: 767px) {
-					font-size: 10px;
 				}
 			}
 			/* .header__desc */
 			&__desc {
-				font-size: 12px;
+				font-size: 0.75rem;
 				line-height: 29px;
 				display: inline-block;
 				margin: 0;
@@ -556,7 +564,7 @@ body {
 			}
 			/* .main-content__section */
 			&__section {
-				flex: 1 1 45%;
+				flex: 0 0 45%;
 				display: flex;
 				flex-wrap: wrap;
 				height: inherit;
@@ -566,7 +574,7 @@ body {
 				}
 				/* .main-content__section_one */
 				&_one {
-					flex: 1 1 55%;
+					flex: 1 1 54%;
 
 					@media (max-width: 767px) {
 						flex: 1 1 100%;
@@ -594,7 +602,7 @@ body {
 				}
 				/* .main-content__section_two */
 				&_two {
-					flex: 1 1 35%;
+					flex: 1 1 34%;
 
 					@media (max-width: 767px) {
 						flex: 1 1 100%;
@@ -638,7 +646,8 @@ body {
 			width: 100%;
 			max-width: 85%;
 			margin: auto;
-			height: 60vh;
+			margin-top: 20vh;
+			height: 65vh;
 			position: relative;
 			display: flex;
 			flex-wrap: wrap;
@@ -646,7 +655,6 @@ body {
 			align-items: center;
 
 			@media (max-width: 767px) {
-				// padding: 90px 0;
 			}
 			
 			/* .top-posts__item */
@@ -654,7 +662,7 @@ body {
 				flex: 1 1 auto;
 				overflow: hidden;
 				margin: 5px;
-				border: 1px solid #fff;
+				border-bottom: 1px solid $blue2;
 			}
 		}
 		.top-post {
@@ -670,6 +678,10 @@ body {
 				height: 100%;
 				display: block;
 				z-index: 1;
+				background-image: linear-gradient(180deg, rgba(0, 0, 0, 0.0), rgba(0, 0, 0, 0.5));
+				&:hover {
+					background-image: linear-gradient(180deg, rgba(0, 0, 0, 0.0), rgba(0, 166, 228, 0.8));
+				}
 			}
 			/* .top-post__img */
 			&__img {
@@ -690,7 +702,8 @@ body {
 					left: 0;
 					right: 0;
 					bottom: 0;
-					background-color: rgba(0, 0, 0, 0.65);
+					background-image: rgba(0, 0, 0, 1.0);
+					z-index: 1;
 				}
 
 				img {
@@ -704,35 +717,40 @@ body {
 			/* .top-post__content */
 			&__content {
 				position: absolute;
-				top: 0;
+				// top: 0;
 				left: 0;
-				right: 0;
+				// right: 0;
 				bottom: 0;
 				width: 100%;
-				height: 100%;
+				// height: 100%;
+				height: auto;
 				display: block;
+				display: flex;
+				flex-direction: column;
+				justify-content: flex-end;
 				padding: 15px;
 
 				color: #fff;
 			}
 			/* .top-post__title */
 			&__title {
-				font-size: 16px;
-				line-height: 18px;
 				font-weight: 700;
-				margin-bottom: 10px;
+				font-size: 1rem;
+				line-height: 140%;
+				margin-top: 0.5em;
 			}
 			/* .top-post__desc */
 			&__desc {
-				font-size: 14px;
-				line-height: 16px;
-				margin-bottom: 10px;
+				font-size: 0.8rem;
+				line-height: 140%;
+				margin-top: 0.5em;
 			}
 			/* .top-post__date */
 			&__date {
-				font-size: 14px;
-				line-height: 16px;
-				margin-bottom: 10px;
+				font-size: 0.6rem;
+				line-height: 140%;
+				margin-top: 0.5em;
+				order: -1;
 			}
 		}
 	}
