--- a/#sourse/scss/_mixins.scss
+++ b/#sourse/scss/_mixins.scss
@@ -1,14 +1,26 @@
-/* ============================================ */
-/* =============MIXINS========================= */
-/* ============================================ */
+// /* ============================================ */
+// /* ===============VARS========================= */
+// /* ============================================ */
+$maxWidth: 1920;
+$maxWidthContainer: 1170;
+$blue: rgba(1, 27, 83, 1.0);
+$blue1: rgba(30,24,70,1.0);
+$blue2: rgba(0,166,228,1.0);
+
+
+
+
+// /* ============================================ */
+// /* =============MIXINS========================= */
+// /* ============================================ */
 @mixin adaptiv-font($pcSize, $mobSize) {
 	$addSize: $pcSize - $mobSize;
 	$addMobSize: $addSize + $addSize * 0.7;
 	@media (max-width: 767px) {
-		font-size: calc(#{$mobSize + px} + #{$addMobSize} * ((100vw - 320px) / #{$maxWidth})) !important;
+		font-size: calc(#{$mobSize + px} + #{$addMobSize} * ((100vw - 320px) / #{$maxWidth + px})) !important;
 	}
 	@media (min-width: 768px) {
-		font-size: calc(#{$mobSize + px} + #{$addSize} * (100vw / #{$maxWidth})) !important;
+		font-size: calc(#{$mobSize + px} + #{$addSize} * (100vw / #{$maxWidth + px})) !important;
 	}
 }
 
@@ -20,6 +32,27 @@
 	}
 	@media (min-width: 768px) {
 		font-size: calc(#{$mobSize + px} + #{$addSize} * (100vw / #{$custMaxWidth})) !important;
+	}
+}
+
+// Адаптивное свойство
+@mixin adaptiv-value($property, $startSize, $minSize, $type) {
+	$addSize: $startSize - $minSize;
+	@if $type==1 {
+		// Только если меньше контейнера
+		#{$property}: $startSize + px;
+		@media (max-width: #{$maxWidthContainer + px}) {
+			#{$property}: calc(#{$minSize + px} + #{$addSize} * ((100vw - 320px) / #{$maxWidthContainer - 320}) );
+		}
+	} @else if $type==2 {
+		// Только если больше контейнера
+		#{$property}: $startSize + px;
+		@media (min-width: #{$maxWidthContainer + px}) {
+			#{$property}: calc(#{$minSize + px} + #{$addSize} * ((100vw - 320px) / #{$maxWidth - 320}) );
+		}
+	} @else  {
+		// Всегда
+		#{$property}: calc(#{$minSize + px} + #{$addSize} * ((100vw - 320px) / #{$maxWidth - 320}) );
 	}
 }
 
@@ -36,11 +69,3 @@
 	background: rgba(1, 27, 83, $op);
 	background: linear-gradient(135deg, rgba(1, 27, 83, $op), rgba(118, 176, 255, $op));
 }
-
-/* ============================================ */
-/* ===============VARS========================= */
-/* ============================================ */
-
-// $maxWidth: 1140px;
-$maxWidth: 1920px;
-$blue: rgba(1, 27, 83, 1.0);
