--- a/#sourse/scss/_front-page.scss
+++ b/#sourse/scss/_front-page.scss
@@ -57,15 +57,16 @@
 /* ============================================ */
 .ntsomz-about {
 	max-width: 100%;
-	height: 100%;
+	height: 100vh;
 	// min-height: 100%;
 	flex: 1 1 100%;
 	display: flex;
-	justify-content: space-between;
+	// justify-content: space-between;
+	justify-content: center;
 	align-items: center;
 	position: relative;
 	margin: 0;
-	padding: 180px 0;
+	// padding: 180px 0;
 
 	@media (max-width: 992px) {
 		padding: 240px 0;
@@ -85,12 +86,10 @@
 	/* .ntsomz-about__wrapper */
 	&__wrapper {
 		width: 85%;
-		height: 100%;
-		margin: 0 auto;
-		background-color: #111;
-		background-image: url('../../assets/img/bg.jpg');
-		background-position: center top;
+		height: 60vh;
+		margin: auto;
 		position: relative;
+		display: flex;
 
 		&::before {
 			content: '';
@@ -101,7 +100,7 @@
 			width: 100%;
 			height: 100%;
 			min-height: 0;
-			background-image: linear-gradient(0deg, rgba(0,0,0,0.3), rgba(0,0,0,0.3));
+			// background-image: linear-gradient(0deg, rgba(0,0,0,0.3), rgba(0,0,0,0.3));
 		}
 
 		@media (max-width: 992px) {
@@ -124,7 +123,11 @@
 		position: relative;
 		width: 100%;
 		height: auto;
-		padding: 90px 0 0;
+		margin: 0 0 10vh;
+		padding: 10vh 0 0;
+		background-color: #111;
+		background-image: url('../../assets/img/bg.jpg');
+		background-position: center top;
 
 		@media (max-width: 992px) {
 			padding: 60px 0 0;
@@ -139,7 +142,7 @@
 	/* .ntsomz-about__image */
 	&__image {
 		position: absolute;
-		top: 90px;
+		top: 10vh;
 		// left: 0;
 		width: calc(42.333% + 50px);
 		height: 100%;
@@ -206,8 +209,8 @@
 	&__title {
 		flex: 1 1 100%;
 		padding: 0;
-		margin: 0 50px 30px 15px;
-		font-size: 26px;
+		margin: 0 50px 15px 15px;
+		font-size: 24px;
 		line-height: 1.6;
 		font-weight: 100;
 		letter-spacing: 0.07em;
@@ -227,8 +230,8 @@
 	&__subtitle {
 		flex: 1 1 100%;
 		padding: 0;
-		margin: 0 50px 30px 15px;
-		font-size: 20px;
+		margin: 0 50px 15px 15px;
+		font-size: 16px;
 		font-weight: 700;
 		letter-spacing: 0.3px;
 		display: inline-block;
@@ -246,8 +249,8 @@
 	&__text {
 		flex: 1 1 100%;
 		padding: 0;
-		margin: 0 50px 30px 15px;
-		font-size: 18px;
+		margin: 0 50px 15px 15px;
+		font-size: 14px;
 		line-height: 29px;
 		font-weight: 300;
 
