Разбил header на 2 файла - для front-page и для page

--- a/#sourse/scss/_front-page.scss
+++ b/#sourse/scss/_front-page.scss
@@ -5,7 +5,7 @@
 	display: flex;
 	align-items: flex-start;
 	background-color: #fff;
-	max-width: #{$maxWidth + px};
+	// max-width: #{$maxWidth + px};
 	margin: 0 auto;
 	padding-bottom: 30px;
 	flex-wrap: wrap;
